--- a/src/main/java/fan/view/FanLandingPage.fxml
+++ b/src/main/java/fan/view/FanLandingPage.fxml
@@ -2,15 +2,16 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
-
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="760.0" prefWidth="1300.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
    <left>
@@ -51,7 +52,7 @@
       </VBox>
    </left>
    <center>
-      <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
+      <VBox prefHeight="200.0" prefWidth="100.0" style="-fx-background-color: white;" BorderPane.alignment="CENTER">
          <children>
             <Pane prefHeight="67.0" prefWidth="1039.0" style="-fx-background-color: #1b4994;">
                <children>
@@ -67,15 +68,29 @@
                   </TextField>
                </children>
             </Pane>
-            <Pane prefHeight="698.0" prefWidth="1026.0" style="-fx-background-color: white;">
+            <VBox>
                <children>
-                  <Text layoutX="36.0" layoutY="64.0" strokeType="OUTSIDE" strokeWidth="0.0">
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Idol List">
                      <font>
-                        <Font size="30.0" />
+                        <Font size="34.0" />
                      </font>
+                     <VBox.margin>
+                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                     </VBox.margin>
                   </Text>
+                  <ScrollPane hbarPolicy="NEVER" prefHeight="619.0" prefWidth="1014.0" style="-fx-background-color: white;">
+                     <content>
+                        <FlowPane maxWidth="-Infinity" minWidth="-Infinity" prefHeight="618.0" prefWidth="999.0" style="-fx-background-color: white;" />
+                     </content>
+                  </ScrollPane>
                </children>
-            </Pane>
+               <VBox.margin>
+                  <Insets />
+               </VBox.margin>
+               <opaqueInsets>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+               </opaqueInsets>
+            </VBox>
          </children>
       </VBox>
    </center>
