--- a/src/main/java/fan/view/FanLandingPage.fxml
+++ b/src/main/java/fan/view/FanLandingPage.fxml
@@ -15,7 +15,7 @@
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="760.0" prefWidth="1300.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
    <left>
-      <VBox alignment="TOP_CENTER" prefHeight="760.0" prefWidth="286.0" spacing="50.0" style="-fx-background-color: #f0f3f7;" BorderPane.alignment="CENTER">
+      <VBox alignment="TOP_CENTER" prefHeight="760.0" prefWidth="286.0" spacing="50.0" style="-fx-background-color: #f0f3f7; -fx-border-color: #1b4994; -fx-border-width: 0 5 0 0;" BorderPane.alignment="CENTER">
          <children>
             <ImageView fitHeight="168.0" fitWidth="181.0" pickOnBounds="true" preserveRatio="true">
                <image>
@@ -24,22 +24,22 @@
             </ImageView>
             <Button fx:id="profileButton12" mnemonicParsing="false" prefHeight="52.0" prefWidth="189.0" style="-fx-border-color: #1b4994; -fx-background-color: #f0f3f7; -fx-background-radius: 5; -fx-border-radius: 5;" text="Profile">
                <font>
-                  <Font size="18.0" />
+                  <Font name="Arial" size="19.0" />
                </font>
             </Button>
             <Button fx:id="profileButton1" layoutX="58.0" layoutY="268.0" mnemonicParsing="false" prefHeight="52.0" prefWidth="189.0" style="-fx-border-color: #1b4994; -fx-background-color: #f0f3f7; -fx-background-radius: 5; -fx-border-radius: 5;" text="Bookings">
                <font>
-                  <Font size="18.0" />
+                  <Font name="Arial" size="19.0" />
                </font>
             </Button>
             <Button fx:id="profileButton11" layoutX="58.0" layoutY="371.0" mnemonicParsing="false" prefHeight="52.0" prefWidth="189.0" style="-fx-border-color: #1b4994; -fx-background-color: #f0f3f7; -fx-background-radius: 5; -fx-border-radius: 5;" text="Settings">
                <font>
-                  <Font size="18.0" />
+                  <Font name="Arial" size="19.0" />
                </font>
             </Button>
             <Button fx:id="profileButton111" layoutX="58.0" layoutY="473.0" mnemonicParsing="false" prefHeight="52.0" prefWidth="189.0" style="-fx-background-color: #f0f3f7; -fx-background-radius: 5; -fx-border-radius: 5; -fx-border-color: #1b4994;" text="Fanmeets">
                <font>
-                  <Font size="18.0" />
+                  <Font name="Arial" size="19.0" />
                </font>
                <VBox.margin>
                   <Insets top="90.0" />
@@ -61,7 +61,7 @@
                         <Image url="@../../../resources/fan/images/back-button.png" />
                      </image>
                   </ImageView>
-                  <TextField alignment="CENTER_RIGHT" layoutX="640.0" layoutY="14.0" prefHeight="27.0" prefWidth="357.0" promptText="Search Idol">
+                  <TextField alignment="CENTER_RIGHT" layoutX="640.0" layoutY="14.0" prefHeight="27.0" prefWidth="357.0" promptText="Search Idol" style="-fx-border-radius: 20; -fx-background-radius: 20;">
                      <font>
                         <Font size="16.0" />
                      </font>
@@ -72,10 +72,10 @@
                <children>
                   <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Idol List">
                      <font>
-                        <Font size="34.0" />
+                        <Font name="Arial Black" size="27.0" />
                      </font>
                      <VBox.margin>
-                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                        <Insets bottom="10.0" left="20.0" right="10.0" top="15.0" />
                      </VBox.margin>
                   </Text>
                   <ScrollPane hbarPolicy="NEVER" prefHeight="619.0" prefWidth="1014.0" style="-fx-background-color: white;">
