--- a/src/main/resources/fxmls/SignupPage.fxml
+++ b/src/main/resources/fxmls/SignupPage.fxml
@@ -6,20 +6,21 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="760.0" prefWidth="1300.0" style="-fx-background-color: #faf0e5;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="authentication.view.SignUpPageView">
-    <center>
-        <AnchorPane prefHeight="762.0" prefWidth="1240.0" BorderPane.alignment="CENTER">
+
+<HBox prefHeight="760.0" prefWidth="1300.0" style="-fx-background-color: #FFFFFF;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="authentication.view.SignUpPageView">
+    <children>
+        <AnchorPane prefHeight="760.0" prefWidth="650.0">
             <children>
-                <VBox alignment="TOP_CENTER" layoutX="113.0" layoutY="1.0" prefHeight="752.0" prefWidth="1115.0">
+                <VBox alignment="TOP_CENTER" layoutX="2.0" layoutY="1.0" prefHeight="762.0" prefWidth="783.0">
                     <children>
-                        <Label alignment="CENTER" prefHeight="124.0" prefWidth="834.0" text="Account Registration" textFill="#66382a">
+                        <Label alignment="CENTER" prefHeight="124.0" prefWidth="834.0" text="Account Registration" textFill="#1b4994">
                             <font>
                                 <Font name="Impact" size="64.0" />
                             </font>
@@ -27,7 +28,7 @@
                                 <Insets top="7.0" />
                             </VBox.margin>
                         </Label>
-                        <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="490.0" prefWidth="701.0">
+                        <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="450.0" prefWidth="702.0">
                             <children>
                                 <Label text="Full Name">
                                     <font>
@@ -37,7 +38,7 @@
                                         <Insets top="10.0" />
                                     </VBox.margin>
                                 </Label>
-                                <TextField fx:id="fullNameTextField" maxHeight="-Infinity" minHeight="-Infinity" prefHeight="38.0" promptText="Charlotte Dupont">
+                                <TextField fx:id="fullNameTextField" maxHeight="-Infinity" minHeight="-Infinity" prefHeight="38.0" promptText="Charlotte Dupont" style="-fx-border-color: #1b4994;">
                                     <font>
                                         <Font name="Garamond" size="16.0" />
                                     </font>
@@ -50,20 +51,7 @@
                                         <Insets top="8.0" />
                                     </VBox.margin>
                                 </Label>
-                                <TextField fx:id="userNameTextField" maxHeight="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="38.0" prefWidth="497.0" promptText="CharCharm">
-                                    <font>
-                                        <Font name="Garamond" size="16.0" />
-                                    </font>
-                                </TextField>
-                                <Label text="Address">
-                                    <font>
-                                        <Font name="Garamond" size="28.0" />
-                                    </font>
-                                    <VBox.margin>
-                                        <Insets top="8.0" />
-                                    </VBox.margin>
-                                </Label>
-                                <TextField fx:id="addressTextField" maxHeight="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="38.0" prefWidth="445.0" promptText="Rimando Road, Baguio City">
+                                <TextField fx:id="userNameTextField" maxHeight="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="38.0" prefWidth="497.0" promptText="CharCharm" style="-fx-border-color: #1b4994;">
                                     <font>
                                         <Font name="Garamond" size="16.0" />
                                     </font>
@@ -76,7 +64,7 @@
                                         <Insets top="8.0" />
                                     </VBox.margin>
                                 </Label>
-                                <TextField fx:id="emailTextField" maxHeight="-Infinity" minHeight="-Infinity" prefHeight="38.0" promptText="charlottie@gmail.com">
+                                <TextField fx:id="emailTextField" maxHeight="-Infinity" minHeight="-Infinity" prefHeight="38.0" promptText="charlottie@gmail.com" style="-fx-border-color: #1b4994;">
                                     <font>
                                         <Font name="Garamond" size="16.0" />
                                     </font>
@@ -89,23 +77,23 @@
                                         <Insets top="8.0" />
                                     </VBox.margin>
                                 </Label>
-                                <PasswordField fx:id="passwordField" maxHeight="-Infinity" minHeight="-Infinity" prefHeight="38.0" promptText="Minimum of Six Characters">
+                                <PasswordField fx:id="passwordField" maxHeight="-Infinity" minHeight="-Infinity" prefHeight="38.0" promptText="Minimum of Six Characters" style="-fx-border-color: #1b4994;">
                                     <font>
                                         <Font name="Garamond" size="16.0" />
                                     </font>
                                 </PasswordField>
-                        <HBox alignment="CENTER" prefHeight="76.0" prefWidth="702.0">
-                           <children>
-                                      <Button fx:id="createAccountButton" alignment="CENTER" contentDisplay="CENTER" maxHeight="-Infinity" minHeight="-Infinity" mnemonicParsing="false" onMouseEntered="#createAccountButtonEntered" onMouseExited="#createAccountButtonExited" prefHeight="50.0" prefWidth="584.0" style="-fx-background-color: #A38157;" text="CREATE ACCOUNT" textFill="WHITE">
-                                          <font>
-                                              <Font name="Copperplate Gothic Light" size="24.0" />
-                                          </font>
-                                      </Button>
-                           </children>
-                           <padding>
-                              <Insets top="10.0" />
-                           </padding>
-                        </HBox>
+                                <HBox alignment="CENTER" prefHeight="76.0" prefWidth="702.0" style="-fx-border-color: #1b4994\;">
+                                    <children>
+                                        <Button fx:id="createAccountButton" alignment="CENTER" contentDisplay="CENTER" maxHeight="-Infinity" minHeight="-Infinity" mnemonicParsing="false" onMouseEntered="#createAccountButtonEntered" onMouseExited="#createAccountButtonExited" prefHeight="50.0" prefWidth="584.0" style="-fx-background-color: transparent; -fx-border-color: #1b4994; -fx-background-radius: 5; -fx-border-radius: 5;" text="CREATE ACCOUNT" textFill="#1b4994">
+                                            <font>
+                                                <Font name="Copperplate Gothic Light" size="24.0" />
+                                            </font>
+                                        </Button>
+                                    </children>
+                                    <padding>
+                                        <Insets top="10.0" />
+                                    </padding>
+                                </HBox>
                                 <Label fx:id="noticeLabel" textFill="RED">
                                     <font>
                                         <Font name="Arial" size="14.0" />
@@ -129,24 +117,25 @@
                                 <Insets top="5.0" />
                             </VBox.margin>
                         </CheckBox>
-                        <Label text="Terms of Service and Privacy Policy" textFill="#593117">
+                        <Label text="Terms of Service and Privacy Policy" textFill="#1b4994">
                             <font>
                                 <Font name="Arial" size="18.0" />
                             </font>
                         </Label>
-                  <Line endX="700.5393676757812" endY="-0.0029976130463182926" stroke="#c8bca9" strokeWidth="1.5" style="-fx-stroke: #C8BCA9;">
-                     <VBox.margin>
-                        <Insets bottom="10.0" top="5.0" />
-                     </VBox.margin>
-                  </Line>
-                      <Button fx:id="homeButton" mnemonicParsing="false" onMouseEntered="#homePageButtonEntered" onMouseExited="#homePageButtonExited" prefHeight="37.0" prefWidth="244.0" style="-fx-background-color: #66382a;" text="Back To Home" textFill="WHITE">
-                          <font>
-                              <Font name="Garamond" size="18.0" />
-                          </font>
-                      </Button>
+                        <Line endX="700.5393676757812" endY="-0.0029976130463182926" stroke="#c8bca9" strokeWidth="1.5" style="-fx-stroke: #C8BCA9;">
+                            <VBox.margin>
+                                <Insets bottom="20.0" top="10.0" />
+                            </VBox.margin>
+                        </Line>
+                        <Button fx:id="homeButton" mnemonicParsing="false" onMouseEntered="#homePageButtonEntered" onMouseExited="#homePageButtonExited" prefHeight="37.0" prefWidth="252.0" style="-fx-background-color: #1b4994; -fx-border-color: #1b4994; -fx-border-radius: 5; -fx-background-radius: 5;" text="Back To Home" textFill="WHITE">
+                            <font>
+                                <Font name="Copperplate Gothic Light" size="18.0" />
+                            </font>
+                        </Button>
                     </children>
                 </VBox>
             </children>
         </AnchorPane>
-    </center>
-</BorderPane>
+        <ImageView fitHeight="760.0" fitWidth="650.0" pickOnBounds="true" preserveRatio="true" />
+    </children>
+</HBox>
