Created and Added fxmls, it includes: BookingsUI.fxml FanMenuUI.fxml

--- a/src/main/resources/fxmls.fan/IdolCards.fxml
+++ b/src/main/resources/fxmls.fan/IdolCards.fxml
@@ -14,7 +14,7 @@
             <children>
                 <ImageView fitHeight="132.0" fitWidth="132.0" pickOnBounds="true" preserveRatio="true">
                     <image>
-                        <Image url="@../../../resources/fan/images/profileMenu.png" />
+                        <Image url="@../fan/images/profileMenu.png" />
                     </image>
                 </ImageView>
                 <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Idol Name" textAlignment="CENTER" wrappingWidth="180.0">
