--- a/src/main/resources/fxmls/Idol/EditFanMeetIdol.fxml
+++ b/src/main/resources/fxmls/Idol/EditFanMeetIdol.fxml
@@ -79,7 +79,7 @@
                   </Pane>
                   <Pane prefHeight="233.0" prefWidth="402.0">
                      <children>
-                        <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="194.0" layoutX="28.0" layoutY="39.0" stroke="BLACK" strokeType="INSIDE" width="341.0" />
+                        <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#1b4994" height="194.0" layoutX="28.0" layoutY="39.0" stroke="BLACK" strokeType="INSIDE" width="341.0" />
                         <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="45.0" layoutX="43.0" layoutY="86.0" stroke="BLACK" strokeType="INSIDE" style="-fx-fill: #f0f3f7; -fx-stroke: #1b4994;" width="307.0" />
                         <Label alignment="TOP_LEFT" layoutX="151.0" layoutY="94.0" text="8:00 AM">
                            <font>
@@ -106,7 +106,10 @@
                   </Pane>
                </children>
             </VBox>
-         </children></HBox>
+         </children>
+         <padding>
+            <Insets top="6.0" />
+         </padding></HBox>
 
 
       <Button fx:id="FanMeetDetailsBackButton" layoutX="58.0" layoutY="371.0" mnemonicParsing="false" prefHeight="52.0" prefWidth="225.0" style="-fx-border-color: #1b4994; -fx-background-color: #f0f3f7; -fx-background-radius: 5; -fx-border-radius: 5;" text="Save Changes">
