--- a/src/main/resources/fxmls/Idol/FanMeetDetailsIdol.fxml
+++ b/src/main/resources/fxmls/Idol/FanMeetDetailsIdol.fxml
@@ -15,20 +15,23 @@
     <children>
         <Pane>
             <children>
-                <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#1b4994" height="55.0" stroke="BLACK" strokeType="INSIDE" style="-fx-stroke: blue;" width="801.0" />
-                <Label alignment="CENTER" layoutY="9.0" prefHeight="38.0" prefWidth="446.0" text="FEBRUARY 14, 2024 Fan Meet" textFill="WHITE">
-                    <font>
-                        <Font name="Arial Black" size="25.0" />
-                    </font>
-                </Label>
+            <Pane prefHeight="55.0" prefWidth="800.0" style="-fx-background-color: #1b4994;">
+               <children>
+                      <Label alignment="TOP_LEFT" layoutX="19.0" layoutY="13.0" prefHeight="38.0" prefWidth="446.0" text="FEBRUARY 14, 2024 Fan Meet" textFill="WHITE">
+                          <font>
+                              <Font name="Arial Black" size="19.0" />
+                          </font>
+                      </Label>
+               </children>
+            </Pane>
             </children>
         </Pane>
         <HBox alignment="CENTER" prefHeight="316.0" prefWidth="800.0">
             <children>
                 <Pane prefHeight="316.0" prefWidth="282.0">
                     <children>
-                        <Rectangle arcHeight="5.0" arcWidth="5.0" fill="LIGHTGRAY" height="267.0" layoutX="9.0" layoutY="25.0" stroke="TRANSPARENT" strokeType="INSIDE" style="-fx-arc-height: 30; -fx-arc-width: 30;" width="264.0" />
-                        <ImageView fitHeight="222.0" fitWidth="242.0" layoutX="30.0" layoutY="47.0" pickOnBounds="true" preserveRatio="true">
+                        <Rectangle arcHeight="5.0" arcWidth="5.0" fill="LIGHTGRAY" height="254.0" layoutX="16.0" layoutY="31.0" stroke="TRANSPARENT" strokeType="INSIDE" style="-fx-arc-height: 30; -fx-arc-width: 30;" width="250.0" />
+                        <ImageView fitHeight="185.0" fitWidth="179.0" layoutX="53.0" layoutY="69.0" pickOnBounds="true" preserveRatio="true">
                             <image>
                                 <Image url="@../../../resources/idol/images/profile-user.png" />
                             </image>
@@ -94,9 +97,9 @@
                         <Font name="Arial" size="24.0" />
                     </font>
                 </Label>
-                <Label alignment="CENTER" layoutX="368.0" layoutY="22.0" prefHeight="27.0" prefWidth="83.0" text="P5000">
+                <Label alignment="CENTER" layoutX="368.0" layoutY="22.0" prefHeight="27.0" prefWidth="83.0" text="P5000" textFill="#1b4994">
                     <font>
-                        <Font name="Arial" size="24.0" />
+                        <Font name="Arial Bold" size="24.0" />
                     </font>
                     <HBox.margin>
                         <Insets left="20.0" />
@@ -108,6 +111,9 @@
             <font>
                 <Font size="18.0" />
             </font>
+         <VBox.margin>
+            <Insets top="5.0" />
+         </VBox.margin>
         </Button>
     </children>
 </VBox>
