--- a/src/main/resources/fxmls/Idol/FirstLandingPageIdol.fxml
+++ b/src/main/resources/fxmls/Idol/FirstLandingPageIdol.fxml
@@ -2,15 +2,12 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
-
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="760.0" prefWidth="1300.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
     <left>
@@ -51,32 +48,6 @@
         </VBox>
     </left>
     <center>
-        <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
-            <children>
-                <Pane prefHeight="67.0" prefWidth="1039.0" style="-fx-background-color: #1b4994;">
-                    <children>
-                        <ImageView fitHeight="50.0" fitWidth="50.0" layoutX="20.0" layoutY="8.0" pickOnBounds="true" preserveRatio="true">
-                            <image>
-                                <Image url="@../../../resources/idol/images/back-button.png" />
-                            </image>
-                        </ImageView>
-                        <TextField alignment="CENTER_RIGHT" layoutX="640.0" layoutY="14.0" prefHeight="27.0" prefWidth="357.0" promptText="Search Idol">
-                            <font>
-                                <Font size="16.0" />
-                            </font>
-                        </TextField>
-                    </children>
-                </Pane>
-                <Pane prefHeight="698.0" prefWidth="1026.0" style="-fx-background-color: white;">
-                    <children>
-                        <Text layoutX="36.0" layoutY="64.0" strokeType="OUTSIDE" strokeWidth="0.0">
-                            <font>
-                                <Font size="30.0" />
-                            </font>
-                        </Text>
-                    </children>
-                </Pane>
-            </children>
-        </VBox>
+      <StackPane BorderPane.alignment="CENTER" />
     </center>
 </BorderPane>
