--- a/src/main/resources/fxmls/Idol/FeedbackPopupView.fxml
+++ b/src/main/resources/fxmls/Idol/FeedbackPopupView.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.image.Image?>
@@ -22,11 +23,14 @@
             </Label>
             <Pane prefHeight="51.0" prefWidth="221.0">
                <children>
-                  <ImageView fitHeight="40.0" fitWidth="49.0" layoutX="137.0" layoutY="6.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../../idol/images/close.png" />
-                     </image>
-                  </ImageView>
+                  <Button layoutX="152.0" layoutY="1.0" maxHeight="-Infinity" maxWidth="-Infinity" mnemonicParsing="false" prefHeight="40.0" prefWidth="40.0" style="-fx-background-color: transparent;">
+                     <graphic>
+                        <ImageView fitHeight="40.0" fitWidth="49.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../../idol/images/exit-bitton.png" />
+                           </image>
+                        </ImageView>
+                     </graphic></Button>
                </children>
                <padding>
                   <Insets bottom="20.0" top="20.0" />
