--- a/src/main/resources/fxmls/Idol/FullFeedbackPopupView.fxml
+++ b/src/main/resources/fxmls/Idol/FullFeedbackPopupView.fxml
@@ -1,22 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextArea?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1">
     <children>
         <HBox prefHeight="51.0" prefWidth="600.0" style="-fx-background-color: #1b4994;">
             <children>
                 <Pane prefHeight="50.0" prefWidth="134.0">
                     <children>
-                        <ImageView fitHeight="40.0" fitWidth="49.0" layoutX="27.0" layoutY="5.0" pickOnBounds="true" preserveRatio="true">
+                  <Button layoutX="37.0" layoutY="1.0" mnemonicParsing="false" style="-fx-background-color: transparent;" />
+                        <ImageView fitHeight="40.0" fitWidth="49.0" layoutX="17.0" layoutY="6.0" pickOnBounds="true" preserveRatio="true">
                             <image>
                                 <Image url="@../../idol/images/back-button.png" />
                             </image>
