Added and edited som fxml, new fxmls includes: FinishedFanMeetsCard.fxml UnfinishedFanMeetsCard.fxml

--- a/src/main/resources/fxmls/fan/CancelFanmeet.fxml
+++ b/src/main/resources/fxmls/fan/CancelFanmeet.fxml
@@ -21,11 +21,15 @@
                         <Font name="Arial Black" size="19.0" />
                      </font>
                   </Label>
-                  <ImageView fitHeight="40.0" fitWidth="40.0" layoutX="752.0" layoutY="7.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../../fan/images/exit-bitton.png" />
-                     </image>
-                  </ImageView>
+                  <Button contentDisplay="CENTER" layoutX="752.0" layoutY="7.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="42.0" prefWidth="42.0" style="-fx-background-color: transparent;">
+                     <graphic>
+                        <ImageView fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../../fan/images/exit-bitton.png" />
+                           </image>
+                        </ImageView>
+                     </graphic>
+                  </Button>
                </children>
             </Pane>
          </children>
