--- a/src/main/resources/fxmls/fan/FanLandingPage.fxml
+++ b/src/main/resources/fxmls/fan/FanLandingPage.fxml
@@ -2,16 +2,12 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.FlowPane?>
-<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="760.0" prefWidth="1300.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
    <left>
@@ -51,47 +47,7 @@
          </padding>
       </VBox>
    </left>
-   <center>
-      <VBox prefHeight="200.0" prefWidth="100.0" style="-fx-background-color: white;" BorderPane.alignment="CENTER">
-         <children>
-            <Pane prefHeight="67.0" prefWidth="1039.0" style="-fx-background-color: #1b4994;">
-               <children>
-                  <ImageView fitHeight="50.0" fitWidth="50.0" layoutX="20.0" layoutY="8.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../../fan/images/back-button.png" />
-                     </image>
-                  </ImageView>
-                  <TextField alignment="CENTER_RIGHT" layoutX="640.0" layoutY="14.0" prefHeight="27.0" prefWidth="357.0" promptText="Search Idol" style="-fx-border-radius: 20; -fx-background-radius: 20;">
-                     <font>
-                        <Font size="16.0" />
-                     </font>
-                  </TextField>
-               </children>
-            </Pane>
-            <VBox>
-               <children>
-                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Idol List">
-                     <font>
-                        <Font name="Arial Black" size="27.0" />
-                     </font>
-                     <VBox.margin>
-                        <Insets bottom="10.0" left="20.0" right="10.0" top="15.0" />
-                     </VBox.margin>
-                  </Text>
-                  <ScrollPane hbarPolicy="NEVER" prefHeight="619.0" prefWidth="1014.0" style="-fx-background-color: white;">
-                     <content>
-                        <FlowPane maxWidth="-Infinity" minWidth="-Infinity" prefHeight="618.0" prefWidth="999.0" style="-fx-background-color: white;" />
-                     </content>
-                  </ScrollPane>
-               </children>
-               <VBox.margin>
-                  <Insets />
-               </VBox.margin>
-               <opaqueInsets>
-                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-               </opaqueInsets>
-            </VBox>
-         </children>
-      </VBox>
-   </center>
+   <right>
+      <StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="760.0" prefWidth="1013.6" BorderPane.alignment="CENTER" />
+   </right>
 </BorderPane>
