--- a/src/main/resources/fxmls/fan/FanMenuUI.fxml
+++ b/src/main/resources/fxmls/fan/FanMenuUI.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
@@ -11,16 +12,19 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
 <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="760.0" prefWidth="1013.6" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Pane prefHeight="67.2" prefWidth="1013.6" style="-fx-background-color: #1b4994;">
          <children>
-            <ImageView fitHeight="50.0" fitWidth="50.0" layoutX="20.0" layoutY="8.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../fan/images/back-button.png" />
-               </image>
-            </ImageView>
+            <Button contentDisplay="CENTER" layoutX="20.0" layoutY="8.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="52.0" prefWidth="52.0" style="-fx-background-color: transparent;">
+               <graphic>
+                  <ImageView fitHeight="50.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../../fan/images/back-button.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+            </Button>
             <TextField alignment="TOP_RIGHT" layoutX="640.0" layoutY="14.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="36.2" prefWidth="357.0" promptText="Search Idol" style="-fx-border-radius: 20; -fx-background-radius: 20;">
                <font>
                   <Font size="16.0" />
