Implemented the List of Booked Fans Card
Also fixed the card sizes to properly fit the flow panes

--- a/src/main/resources/fxmls/Idol/UpcomingFanMeetsViewCard.fxml
+++ b/src/main/resources/fxmls/Idol/UpcomingFanMeetsViewCard.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<HBox alignment="CENTER_RIGHT" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="180.0" prefWidth="880.0" style="-fx-background-color: #f0f3f7;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+<HBox alignment="CENTER_RIGHT" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="180.0" prefWidth="880.0" style="-fx-background-color: #f0f3f7; -fx-border-color: #1571b2; -fx-background-radius: 10; -fx-border-radius: 10;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <VBox alignment="CENTER_LEFT" prefHeight="110.0" prefWidth="505.0">
          <children>
@@ -27,7 +27,7 @@
          <children>
             <Button mnemonicParsing="false" prefHeight="41.0" prefWidth="260.0" style="-fx-background-color: #1571b2; -fx-border-color: #1b4994; -fx-background-radius: 20; -fx-border-radius: 20;" text="List of Booked Fans" textFill="WHITE">
                <font>
-                  <Font name="Arial" size="18.0" />
+                  <Font name="Arial" size="20.0" />
                </font>
             </Button>
             <Button mnemonicParsing="false" prefHeight="41.0" prefWidth="260.0" style="-fx-background-color: #1571b2; -fx-border-color: #1b4994; -fx-background-radius: 20; -fx-border-radius: 20;" text="Edit Details" textFill="WHITE">
